# jarvis-app

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml
jarvis-widget/: build.rs
jarvis-widget/src/: bridge.rs  ipc.rs  main.rs
rust/: Cargo.toml  build.rs
rust/qml/: Main.qml
rust/src/: bridge.rs  ipc.rs  main.rs
src/: index.html  main.js  markdown.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  widget.json
src-tauri/icons/: generate_icon_source.py
src-tauri/resources/widgets/wake-word-orb/: index.html  manifest.json
src-tauri/src/: ipc.rs  lib.rs  main.rs  widgets.rs
