[package]
name = "jarvis-ui"
version = "0.1.0"
edition = "2021"
description = "JARVIS OS -- Chat UI (CXX-Qt)"

[[bin]]
name = "jarvis-ui"
path = "src/main.rs"

[dependencies]
cxx-qt     = "0.8"
cxx-qt-lib = { version = "0.8", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["clock"] }

[build-dependencies]
cxx-qt-build = "0.8"

# Build requirements (Arch Linux):
#   sudo pacman -S qt6-base qt6-declarative cmake ninja rust
#
# Build:
#   cargo build --release
